Replace "extensions" translation to "extension"

--- a/l10n/po/ja_JP/_posts/2019-11-13-vodafone-greece-replaces-spring-boot.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-13-vodafone-greece-replaces-spring-boot.adoc.po
@@ -104,7 +104,7 @@ msgstr "彼らは他のネイティブにコンパイル可能なフレームワ
 #: upstream/_posts/2019-11-13-vodafone-greece-replaces-spring-boot.adoc:30
 #, fuzzy
 msgid "Another reason Quarkus was selected over competing technologies was the ability for developers to write their own extensions. In addition, the project’s high activity characteristics, such as number of community members, project stars, quick turnaround to replies and fixes by Quarkus developers to community issues, and number of Red Hat developers thoroughly answering technical questions via the project communication channels were positive indicators for them to select Quarkus. Lastly, their trust of Red Hat combined with its credibility in the software market gave them the assurance that they were making the right choice by selecting Quarkus, whose sponsor is Red Hat."
-msgstr "競合技術よりもQuarkusが選ばれたもう一つの理由は、開発者が独自の拡張機能を書けることでした。さらに、コミュニティメンバーの数、プロジェクトのスターの数、Quarkusの開発者によるコミュニティの問題への返信や修正への迅速な対応、プロジェクトのコミュニケーションチャンネルを通じて技術的な質問に丁寧に答えてくれるRed Hatの開発者の数など、プロジェクトの活動性の高さがQuarkusを選択するためのポジティブな指標となりました。最後に、ソフトウェア市場での信頼性とRed Hatへの信頼が組み合わさって、スポンサーがRed HatであるQuarkusを選択したことが正しい選択であることを確信させてくれました。"
+msgstr "競合技術よりもQuarkusが選ばれたもう一つの理由は、開発者が独自のエクステンションを書けることでした。さらに、コミュニティメンバーの数、プロジェクトのスターの数、Quarkusの開発者によるコミュニティの問題への返信や修正への迅速な対応、プロジェクトのコミュニケーションチャンネルを通じて技術的な質問に丁寧に答えてくれるRed Hatの開発者の数など、プロジェクトの活動性の高さがQuarkusを選択するためのポジティブな指標となりました。最後に、ソフトウェア市場での信頼性とRed Hatへの信頼が組み合わさって、スポンサーがRed HatであるQuarkusを選択したことが正しい選択であることを確信させてくれました。"
 
 #. type: Title ==
 #: upstream/_posts/2019-11-13-vodafone-greece-replaces-spring-boot.adoc:31
@@ -211,7 +211,7 @@ msgstr "次のステップとしては、ボーダフォン・ギリシャが現
 #: upstream/_posts/2019-11-13-vodafone-greece-replaces-spring-boot.adoc:62
 #, fuzzy
 msgid "Presently, they run Quarkus in JVM mode when interfacing to MongoDB but they are considering using native compilation with MongoDB in the future. When Vodafone Greece started using Quarkus a few months ago, it didn’t include an extension for MongoDB but Quarkus does include a MongoDB client extension now that they could leverage. In addition, they plan to use more Quarkus extensions, like circuit breakers from MicroProfile Fault Tolerance, and more broadly adopt MicroProfile reactive messaging specifications."
-msgstr "現在のところ、MongoDBとの連携時にはJVMモードでQuarkusを実行していますが、将来的にはMongoDBを使ったネイティブコンパイルの使用を検討しているとのことです。Vodafone Greeceが数ヶ月前にQuarkusを使い始めたときは、MongoDB用の拡張機能は含まれていませんでしたが、QuarkusにはMongoDBクライアント用の拡張機能が含まれているので、それを利用することができます。さらに、MicroProfile Fault ToleranceのサーキットブレーカーのようなQuarkusの拡張機能をさらに使い、MicroProfileのリアクティブメッセージング仕様をより広く採用していく予定だという。"
+msgstr "現在のところ、MongoDBとの連携時にはJVMモードでQuarkusを実行していますが、将来的にはMongoDBを使ったネイティブコンパイルの使用を検討しているとのことです。Vodafone Greeceが数ヶ月前にQuarkusを使い始めたときは、MongoDB用のエクステンションは含まれていませんでしたが、QuarkusにはMongoDBクライアント用のエクステンションが含まれているので、それを利用することができます。さらに、MicroProfile Fault ToleranceのサーキットブレーカーのようなQuarkusのエクステンションをさらに使い、MicroProfileのリアクティブメッセージング仕様をより広く採用していく予定だという。"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-13-vodafone-greece-replaces-spring-boot.adoc:64
