--- a/l10n/po/ja_JP/_posts/2020-04-27-quarkus-1-4-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-27-quarkus-1-4-final-released.adoc.po
@@ -284,7 +284,7 @@ msgstr "link:/guides/vault-datasource[HashiCorp Vaultをデータベースで利
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:86
 #, fuzzy, no-wrap
 msgid "New extensions"
-msgstr "新しい拡張機能"
+msgstr "新しいエクステンション"
 
 #. type: Title ====
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:88
@@ -302,7 +302,7 @@ msgstr "以前のバージョンでは、Keycloak Admin Clientにいくつかの
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:93
 #, fuzzy
 msgid "We added a dedicated extension called `quarkus-keycloak-admin-client` to ensure a smooth experience."
-msgstr "スムーズにご利用いただけるように、 `quarkus-keycloak-admin-client` という専用の拡張機能を追加しました。"
+msgstr "スムーズにご利用いただけるように、 `quarkus-keycloak-admin-client` という専用のエクステンションを追加しました。"
 
 #. type: Title ====
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:94
@@ -314,7 +314,7 @@ msgstr "アマゾンアレクサ"
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:97
 #, fuzzy
 msgid "Amazon Alexa is now supported in native thanks to the addition of the `quarkus-amazon-alexa` extension."
-msgstr "Amazon Alexaは、 `quarkus-amazon-alexa` 拡張機能の追加により、ネイティブでサポートされるようになりました。"
+msgstr "Amazon Alexaは、 `quarkus-amazon-alexa` エクステンションの追加により、ネイティブでサポートされるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:101
