--- a/l10n/po/ja_JP/_posts/2020-06-03-quarkus-1-5-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-03-quarkus-1-5-final-released.adoc.po
@@ -38,7 +38,7 @@ msgstr ""
 "title: Quarkus 1.5リリース - ファストジャーパッケージングフォーマット、Picocli、gRPC、GraphQLなど\n"
 "date: 2020-06-03\n"
 "tags: release\n"
-"synopsis: Quarkus 1.5では、Picocli、gRPC、GraphQLのサポートが追加され、より多くのAmazon Services拡張機能が導入されています。また、新しいファストジャーパッケージ形式も含まれています。\n"
+"synopsis: Quarkus 1.5では、Picocli、gRPC、GraphQLのサポートが追加され、より多くのAmazon Servicesエクステンションが導入されています。また、新しいファストジャーパッケージ形式も含まれています。\n"
 "author: gsmet\n"
 "---\n"
 
@@ -70,19 +70,19 @@ msgstr "ジーアールピーシーかくちょう"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:16
 #, fuzzy
 msgid "Eclipse MicroProfile GraphQL extension"
-msgstr "Eclipse MicroProfile GraphQL 拡張機能"
+msgstr "Eclipse MicroProfile GraphQL エクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:17
 #, fuzzy
 msgid "Amazon Services extensions"
-msgstr "アマゾンサービス拡張機能"
+msgstr "アマゾンサービスエクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:18
 #, fuzzy
 msgid "Hibernate ORM REST Data with Panache extension"
-msgstr "Hibernate ORM RESTデータのPanache拡張機能付き"
+msgstr "Hibernate ORM RESTデータのPanacheエクステンション付き"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:19
@@ -154,7 +154,7 @@ msgstr "またはビルド時に `-Dquarkus.package.type=fast-jar` を渡す。"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:44
 #, fuzzy, no-wrap
 msgid "New extensions"
-msgstr "新しい拡張機能"
+msgstr "新しいエクステンション"
 
 #. type: Title ====
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:46
@@ -166,7 +166,7 @@ msgstr "Picocli"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:49
 #, fuzzy
 msgid "1.4 introduced command mode and we now have a Picocli extension relying on it to simplify the creation of rich command line applications."
-msgstr "1.4ではコマンドモードが導入され、それに依存したPicocli拡張機能が追加され、リッチなコマンドラインアプリケーションの作成が簡単になりました。"
+msgstr "1.4ではコマンドモードが導入され、それに依存したPicocliエクステンションが追加され、リッチなコマンドラインアプリケーションの作成が簡単になりました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:51
@@ -214,7 +214,7 @@ msgstr "MicroProfile GraphQL"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:63
 #, fuzzy
 msgid "Speaking of popular requests, Quarkus 1.5 introduces a GraphQL extension implementing Eclipse MicroProfile GraphQL."
-msgstr "人気のリクエストといえば、Quarkus 1.5では、Eclipse MicroProfile GraphQLを実装したGraphQL拡張機能を紹介しています。"
+msgstr "人気のリクエストといえば、Quarkus 1.5では、Eclipse MicroProfile GraphQLを実装したGraphQLエクステンションを紹介しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:65
@@ -280,7 +280,7 @@ msgstr "Hibernate ORM RESTデータをPanacheで"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:80
 #, fuzzy
 msgid "The purpose of the `with Panache` extensions is to simplify a set of features and bring back developer joy."
-msgstr "`with Panache` 拡張機能の目的は、一連の機能をシンプルにして開発者の喜びを取り戻すことです。"
+msgstr "`with Panache` エクステンションの目的は、一連の機能をシンプルにして開発者の喜びを取り戻すことです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:82
@@ -304,13 +304,13 @@ msgstr "Spring Cache アノテーション"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:88
 #, fuzzy
 msgid "Our Spring compatibility layer has one more feature: the support of the Spring Cache extensions."
-msgstr "私たちのSpring互換性レイヤーには、もう一つの機能があります:Spring Cache拡張機能のサポートです。"
+msgstr "私たちのSpring互換性レイヤーには、もう一つの機能があります:Spring Cacheエクステンションのサポートです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:90
 #, fuzzy
 msgid "We do not support every feature but you will be able to use most of them backed by the preexisting Cache extension based on Caffeine."
-msgstr "すべての機能をサポートしているわけではありませんが、Caffeine をベースにした既存の Cache 拡張機能に裏打ちされたほとんどの機能を利用できるようになります。"
+msgstr "すべての機能をサポートしているわけではありませんが、Caffeine をベースにした既存の Cache エクステンションに裏打ちされたほとんどの機能を利用できるようになります。"
 
 #. type: Title ====
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:91
@@ -322,7 +322,7 @@ msgstr "ブレイズの持続性"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:94
 #, fuzzy
 msgid "An extension for Blaze Persistence is now available in the Quarkus Platform."
-msgstr "Blaze Persistenceの拡張機能がQuarkus Platformで利用可能になりました。"
+msgstr "Blaze PersistenceのエクステンションがQuarkus Platformで利用可能になりました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:96
@@ -358,7 +358,7 @@ msgstr "アグロアル"
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:107
 #, fuzzy
 msgid "The Agroal extension includes support for external pooling solutions e.g. pgagroal or Pgpool."
-msgstr "Agroal拡張機能には、pgagroalやPgpoolなどの外部プーリングソリューションのサポートが含まれています。"
+msgstr "Agroalエクステンションには、pgagroalやPgpoolなどの外部プーリングソリューションのサポートが含まれています。"
 
 #. type: Title ===
 #: upstream/_posts/2020-06-03-quarkus-1-5-final-released.adoc:108
