--- a/l10n/po/ja_JP/_posts/2020-10-19-micrometer-metrics.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-19-micrometer-metrics.adoc.po
@@ -132,7 +132,7 @@ msgstr "Quarkusを使用すると、JAX-RS、Vert.x、Undertowのいずれで作
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:73
 #, fuzzy
 msgid "The http metrics emitted by the Micrometer extension is the also same as what is emitted by Spring Boot and Micronaut, allowing SREs to work with aggregated http metrics regardless of which Java framework is used."
-msgstr "Micrometer 拡張機能によって放出される http メトリクスは、Spring Boot や Micronaut によって放出されるものと同じで、どの Java フレームワークが使われているかに関係なく、SREs は集約された http メトリクスを使って作業することができます。"
+msgstr "Micrometer エクステンションによって放出される http メトリクスは、Spring Boot や Micronaut によって放出されるものと同じで、どの Java フレームワークが使われているかに関係なく、SREs は集約された http メトリクスを使って作業することができます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:74
@@ -144,7 +144,7 @@ msgstr "MicroProfile Metrics はまだ使えますか?"
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:80
 #, fuzzy
 msgid "The MicroProfile Metrics extension, `quarkus-smallrye-metrics`, is still available and usable by applications.  For all the reasons outlined in <<why-micrometer>>, Quarkus no longer recommends applications use the extension."
-msgstr "MicroProfile Metricsエクステンション( `quarkus-smallrye-metrics` )は、まだ利用可能で、アプリケーションで使用できます。 link:#why-micrometer[why-micrometer]] で説明したすべての理由により、Quarkusではこの拡張機能の使用をアプリケーションに推奨していません。"
+msgstr "MicroProfile Metricsエクステンション( `quarkus-smallrye-metrics` )は、まだ利用可能で、アプリケーションで使用できます。 link:#why-micrometer[why-micrometer]] で説明したすべての理由により、Quarkusではこのエクステンションの使用をアプリケーションに推奨していません。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:84
@@ -168,7 +168,7 @@ msgstr "概要"
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:96
 #, fuzzy
 msgid "Since 1.8 Quarkus offered two extensions for metrics, `quarkus-micrometer` and `quarkus-smallrye-metrics`.  With the release of 1.9, Quarkus will be recommending `quarkus-micrometer` for use with metrics."
-msgstr "1.8以降、Quarkusはメトリクスのために、 `quarkus-micrometer` と `quarkus-smallrye-metrics` の2つの拡張機能を提供していました。1.9のリリースでは、Quarkusはメトリクスで使用するために `quarkus-micrometer` を推奨します。"
+msgstr "1.8以降、Quarkusはメトリクスのために、 `quarkus-micrometer` と `quarkus-smallrye-metrics` の2つのエクステンションを提供していました。1.9のリリースでは、Quarkusはメトリクスで使用するために `quarkus-micrometer` を推奨します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:99
