--- a/l10n/po/ja_JP/_generated-config/config/quarkus-micrometer-config-group-config-json-config-group.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-micrometer-config-group-config-json-config-group.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-11 02:13+0000\n"
+"POT-Creation-Date: 2021-03-03 16:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -71,7 +71,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path for the JSON metrics endpoint. The default value is `/metrics`.\n"
+"The path for the JSON metrics endpoint. The default value is `metrics`.\n"
 "--"
 msgstr ""
 
@@ -84,7 +84,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-micrometer-config-group-config-json-config-group.adoc:29
 #, no-wrap
-msgid "`/metrics`"
+msgid "`metrics`"
 msgstr ""
 
 #. type: Table
