--- a/l10n/po/ja_JP/_generated-config/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:29+0900\n"
+"POT-Creation-Date: 2021-03-03 16:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -72,7 +72,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path for the JSON metrics endpoint. The default value is `/metrics`.\n"
+"The path for the JSON metrics endpoint. The default value is `metrics`.\n"
 "--"
 msgstr ""
 
@@ -87,7 +87,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc:29
 #: upstream/_generated-config/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc:66
 #, no-wrap
-msgid "`/metrics`"
+msgid "`metrics`"
 msgstr ""
 
 #. type: Table
@@ -161,7 +161,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path for the prometheus metrics endpoint (produces text/plain). The default value is `/metrics`.\n"
+"The path for the prometheus metrics endpoint (produces text/plain). The default value is `metrics`.\n"
 "--"
 msgstr ""
 
