--- a/l10n/po/ja_JP/_generated-config/config/quarkus-micrometer.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-micrometer.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-02 14:40+0900\n"
+"POT-Creation-Date: 2021-03-03 16:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -236,7 +236,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path for the JSON metrics endpoint. The default value is `/metrics`.\n"
+"The path for the JSON metrics endpoint. The default value is `metrics`.\n"
 "--"
 msgstr ""
 
@@ -251,7 +251,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-micrometer.adoc:143
 #: upstream/_generated-config/config/quarkus-micrometer.adoc:181
 #, no-wrap
-msgid "`/metrics`"
+msgid "`metrics`"
 msgstr ""
 
 #. type: Table
@@ -325,7 +325,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path for the prometheus metrics endpoint (produces text/plain). The default value is `/metrics`.\n"
+"The path for the prometheus metrics endpoint (produces text/plain). The default value is `metrics`.\n"
 "--"
 msgstr ""
 
