--- a/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:29+0900\n"
+"POT-Creation-Date: 2021-03-03 16:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -176,7 +176,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:79
 #, no-wrap
-msgid "`/graphql-ui`"
+msgid "`graphql-ui`"
 msgstr ""
 
 #. type: Table
