--- a/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:29+0900\n"
+"POT-Creation-Date: 2021-03-03 16:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -67,7 +67,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc:20
 #, no-wrap
-msgid "`/health`"
+msgid "`health`"
 msgstr ""
 
 #. type: Table
@@ -85,7 +85,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc:29
 #, no-wrap
-msgid "`/live`"
+msgid "`live`"
 msgstr ""
 
 #. type: Table
@@ -103,7 +103,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc:38
 #, no-wrap
-msgid "`/ready`"
+msgid "`ready`"
 msgstr ""
 
 #. type: Table
@@ -121,7 +121,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc:47
 #, no-wrap
-msgid "`/group`"
+msgid "`group`"
 msgstr ""
 
 #. type: Table
@@ -139,7 +139,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc:56
 #, no-wrap
-msgid "`/well`"
+msgid "`well`"
 msgstr ""
 
 #. type: Table
@@ -163,7 +163,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc:70
 #, no-wrap
-msgid "`/health-ui`"
+msgid "`health-ui`"
 msgstr ""
 
 #. type: Table
