--- a/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:29+0900\n"
+"POT-Creation-Date: 2021-03-03 16:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -114,7 +114,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health.adoc:38
 #, no-wrap
-msgid "`/health`"
+msgid "`health`"
 msgstr ""
 
 #. type: Table
@@ -132,7 +132,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health.adoc:47
 #, no-wrap
-msgid "`/live`"
+msgid "`live`"
 msgstr ""
 
 #. type: Table
@@ -150,7 +150,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health.adoc:56
 #, no-wrap
-msgid "`/ready`"
+msgid "`ready`"
 msgstr ""
 
 #. type: Table
@@ -168,7 +168,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health.adoc:65
 #, no-wrap
-msgid "`/group`"
+msgid "`group`"
 msgstr ""
 
 #. type: Table
@@ -186,7 +186,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health.adoc:74
 #, no-wrap
-msgid "`/well`"
+msgid "`well`"
 msgstr ""
 
 #. type: Table
@@ -222,7 +222,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-smallrye-health.adoc:97
 #, no-wrap
-msgid "`/health-ui`"
+msgid "`health-ui`"
 msgstr ""
 
 #. type: Table
