--- a/l10n/po/ja_JP/_generated-config/config/quarkus-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-swaggerui.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-23 11:08+0000\n"
+"POT-Creation-Date: 2021-03-03 16:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -89,7 +89,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/config/quarkus-swaggerui.adoc:21
 #, no-wrap
-msgid "`/swagger-ui`"
+msgid "`swagger-ui`"
 msgstr ""
 
 #. type: Table
