Apply translation memory

--- a/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
@@ -126,7 +126,7 @@ msgstr ""
 #: upstream/_guides/ide-tooling.adoc:50
 #, no-wrap
 msgid "Description"
-msgstr ""
+msgstr "説明"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:51
