Add machine translation

--- a/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
@@ -21,106 +21,129 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/ide-tooling.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus - Quarkus Tools in your favorite IDE"
-msgstr ""
+msgstr "Quarkus - お気に入りのIDEでQuarkus Tools"
 
 #. type: Title ==
 #: upstream/_guides/ide-tooling.adoc:11
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "IDE Overview"
-msgstr ""
+msgstr "IDEの概要"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:14
+#, fuzzy
 msgid "The following IDEs have support for the community developed Quarkus Tools:"
-msgstr ""
+msgstr "以下のIDEは、コミュニティで開発されたQuarkus Toolsをサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:16
+#, fuzzy
 msgid "https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus[Quarkus Tools for Visual Studio Code]"
-msgstr ""
+msgstr "link:https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus[Quarkus Tools for Visual Studio Code]"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:17
+#, fuzzy
 msgid "https://marketplace.eclipse.org/content/quarkus-tools[Quarkus Tools for Eclipse]"
-msgstr ""
+msgstr "link:https://marketplace.eclipse.org/content/quarkus-tools[Quarkus Tools for Eclipse]"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:18
+#, fuzzy
 msgid "https://plugins.jetbrains.com/plugin/13234-quarkus/versions[Quarkus Tools for IntelliJ]"
-msgstr ""
+msgstr "link:https://plugins.jetbrains.com/plugin/13234-quarkus/versions[Quarkus Tools for IntelliJ]"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:19
+#, fuzzy
 msgid "https://github.com/eclipse/che-devfile-registry/blob/master/devfiles/quarkus/devfile.yaml[Quarkus Tools for Eclipse Che]"
-msgstr ""
+msgstr "link:https://github.com/eclipse/che-devfile-registry/blob/master/devfiles/quarkus/devfile.yaml[Quarkus Tools for Eclipse Che]"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:21
+#, fuzzy
 msgid "In addition IntelliJ has additional support for Quarkus in their Ultimate non-open source version."
-msgstr ""
+msgstr "さらにIntelliJは、非オープンソースのUltimate版でQuarkusを追加サポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:23
+#, fuzzy
 msgid "https://www.jetbrains.com/help/idea/quarkus.html[IntelliJ Ultimate Edition built-in Quarkus support]"
-msgstr ""
+msgstr "link:https://www.jetbrains.com/help/idea/quarkus.html[IntelliJ Ultimate Editionに内蔵されたQuarkusのサポート]"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:25
+#, fuzzy
 msgid "The table below gives an overview of the current IDE's with links and a high-level overview of their features."
-msgstr ""
+msgstr "下の表では、現在のリンク付きIDEの概要と、その機能のハイレベルな概要をご紹介しています。"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:33
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "."
-msgstr ""
+msgstr "."
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:36
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "image:{vscode-logo}[200,200]\n"
 "{empty} +\n"
 "VSCode Quarkus Tools"
 msgstr ""
+"image:{vscode-logo}[alt=200] \n"
+"<br> VSCode Quarkusツール\n"
+"<br>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:39
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "image:{eclipse-logo}[200,200]\n"
 "{empty} +\n"
 "Eclipse Quarkus Tools"
 msgstr ""
+"image:{eclipse-logo}[alt=200] \n"
+"<br> Eclipse Quarkusツール\n"
+"<br>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:42
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "image:{intellij-logo}[100,100]\n"
 "{empty} +\n"
 "IntelliJ Quarkus Tools"
 msgstr ""
+"image:{intellij-logo}[alt=100] \n"
+"<br> IntelliJ Quarkusツール\n"
+"<br>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:45
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "image:{intellij-logo}[100,100]\n"
 "{empty} +\n"
 "IntelliJ Ultimate"
 msgstr ""
+"image:{intellij-logo}[alt=100] \n"
+"<br> インテリJアルティメット\n"
+"<br>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:49
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "image:{che-logo}[100,100]\n"
 "{empty} +\n"
 "Eclipse Che"
 msgstr ""
+"image:{che-logo}[alt=100] \n"
+"<br> エクリプスチェ\n"
+"<br>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:50
@@ -130,125 +153,131 @@ msgstr "説明"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:51
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Visual Studio Code extension to install using the marketplace"
-msgstr ""
+msgstr "マーケットプレイスを使用してインストールするVisual Studioのコード拡張機能"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:52
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Eclipse plugin to install into Eclipse using an updatesite"
-msgstr ""
+msgstr "アップデートサイトを使ってEclipseにインストールするEclipseプラグイン"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:53
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "IntelliJ plugin that works in IntelliJ Community and Ultimate. Available from Marketplace."
-msgstr ""
+msgstr "IntelliJ CommunityとUltimateで動作するIntelliJプラグイン。マーケットプレイスから入手可能。"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:54
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Built-in Quarkus features available only in IntelliJ Ultimate"
-msgstr ""
+msgstr "IntelliJ Ultimateでのみ利用可能なQuarkusの内蔵機能"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:56
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Built-in Quarkus features available in Eclipse Che incl. che.openshift.io."
-msgstr ""
+msgstr "Eclipse Cheで利用可能なQuarkusの組み込み機能にはche.openshift.ioなどがあります。"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:57
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Status"
-msgstr ""
+msgstr "ステータス"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:58 upstream/_guides/ide-tooling.adoc:59
 #: upstream/_guides/ide-tooling.adoc:60 upstream/_guides/ide-tooling.adoc:61
 #: upstream/_guides/ide-tooling.adoc:63
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Stable"
-msgstr ""
+msgstr "安定した"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:64
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Downloads"
-msgstr ""
+msgstr "ダウンロード"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:67
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus[Marketplace]\n"
 "{empty} +\n"
 " https://download.jboss.org/jbosstools/vscode/snapshots/vscode-quarkus/?C=M;O=D[Development Builds]"
 msgstr ""
+"link:https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus[マーケットプレイス] \n"
+"<br>  link:https://download.jboss.org/jbosstools/vscode/snapshots/vscode-quarkus/?C=M;O=D[開発の構築]\n"
+"<br>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:68
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://download.jboss.org/jbosstools/photon/snapshots/builds/jbosstools-quarkus_master/[Development Update Site]"
-msgstr ""
+msgstr "link:https://download.jboss.org/jbosstools/photon/snapshots/builds/jbosstools-quarkus_master/[開発更新サイト]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:71
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "https://plugins.jetbrains.com/plugin/13234-quarkus/versions[Marketplace]\n"
 "{empty} +\n"
 "https://download.jboss.org/jbosstools/intellij/snapshots/intellij-quarkus/[Development Builds]"
 msgstr ""
+"link:https://plugins.jetbrains.com/plugin/13234-quarkus/versions[マーケットプレイス] \n"
+"<br>  link:https://download.jboss.org/jbosstools/intellij/snapshots/intellij-quarkus/[開発の構築]\n"
+"<br>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:72
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://www.jetbrains.com/idea/nextversion/[Installer]"
-msgstr ""
+msgstr "link:https://www.jetbrains.com/idea/nextversion/[インストーラ]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:74
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://che.openshift.io/f?url=https://raw.githubusercontent.com/redhat-developer/devfile/master/getting-started/quarkus/devfile.yaml[Start Che Workspace]"
-msgstr ""
+msgstr "link:https://che.openshift.io/f?url=https://raw.githubusercontent.com/redhat-developer/devfile/master/getting-started/quarkus/devfile.yaml[チェ・ワークスペース開始]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:75
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Source"
-msgstr ""
+msgstr "ソース"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:76
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://github.com/redhat-developer/vscode-quarkus[Github]"
-msgstr ""
+msgstr "link:https://github.com/redhat-developer/vscode-quarkus[Github]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://github.com/jbosstools/jbosstools-quarkus[Github]"
-msgstr ""
+msgstr "link:https://github.com/jbosstools/jbosstools-quarkus[Github]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:78
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://github.com/redhat-developer/intellij-quarkus[Github]"
-msgstr ""
+msgstr "link:https://github.com/redhat-developer/intellij-quarkus[Github]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:79
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Closed-Source"
-msgstr ""
+msgstr "クローズドソース"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:82
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
-msgstr ""
+msgstr "link:https://github.com/redhat-developer/quarkus-ls[Quarkus言語サーバー]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:83 upstream/_guides/ide-tooling.adoc:84
@@ -274,9 +303,9 @@ msgstr ""
 #: upstream/_guides/ide-tooling.adoc:151 upstream/_guides/ide-tooling.adoc:153
 #: upstream/_guides/ide-tooling.adoc:154 upstream/_guides/ide-tooling.adoc:155
 #: upstream/_guides/ide-tooling.adoc:158 upstream/_guides/ide-tooling.adoc:163
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "icon:check[]"
-msgstr ""
+msgstr "<span class=\"icon\">チェック</span>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:86 upstream/_guides/ide-tooling.adoc:97
@@ -285,84 +314,84 @@ msgstr ""
 #: upstream/_guides/ide-tooling.adoc:148 upstream/_guides/ide-tooling.adoc:156
 #: upstream/_guides/ide-tooling.adoc:160 upstream/_guides/ide-tooling.adoc:161
 #: upstream/_guides/ide-tooling.adoc:162 upstream/_guides/ide-tooling.adoc:164
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "icon:times[]"
-msgstr ""
+msgstr "<span class=\"icon\">拍手喝采</span>"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:89
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Wizards w/code.quarkus.io"
-msgstr ""
+msgstr "ウィザード/w/code.quarkus.io"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:92
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://issues.jboss.org/browse/JBIDE-26950[icon:times[]]"
-msgstr ""
+msgstr "link:https://issues.jboss.org/browse/JBIDE-26950[拍手]喝采"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:96
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Custom Wizard"
-msgstr ""
+msgstr "カスタムウィザード"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:103
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Config editor"
-msgstr ""
+msgstr "コンフィグエディタ"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:110
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Config autocompletion"
-msgstr ""
+msgstr "自動補完の設定"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:117
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Config validation"
-msgstr ""
+msgstr "設定の検証"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:124
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Config jump to definition"
-msgstr ""
+msgstr "コンフィグは定義にジャンプします。"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:128
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "?"
-msgstr ""
+msgstr "?"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:131
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Config profiles"
-msgstr ""
+msgstr "設定プロファイル"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:138
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Config outline"
-msgstr ""
+msgstr "コンフィグの概要"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:145
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Easy Launch debug/dev:mode"
-msgstr ""
+msgstr "簡単な起動 debug/dev:mode"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:152
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus Code Snippets"
-msgstr ""
+msgstr "Quarkusコードスニペット"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:159
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Injection Discovery/Navigation"
-msgstr ""
+msgstr "インジェクションディスカバリー/ナビゲーション"
