--- a/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
@@ -2478,8 +2478,9 @@ msgstr "フィルタチェインを継続する代わりにクライアントに
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1209
+#, fuzzy
 msgid "You can restrict the Resource methods for which a filter runs, by using link:{jaxrsapi}/javax/ws/rs/NameBinding.html[`@NameBinding`] meta-annotations."
-msgstr ""
+msgstr "フィルタが実行するリソースメソッドを制限するには  link:{jaxrsapi}/javax/ws/rs/NameBinding.html[`@NameBinding`]メタアノテーション。"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive.adoc:1210
