Update .po files

--- a/l10n/po/ja_JP/_data/guides.yaml.po
+++ b/l10n/po/ja_JP/_data/guides.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-01 13:12+0000\n"
+"POT-Creation-Date: 2021-03-03 19:12+0000\n"
 "PO-Revision-Date: 2021-02-07 21:49+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -98,6 +98,26 @@ msgstr "ツールの使用"
 #: >categories>>guides>
 #, no-wrap
 msgid "/guides/tooling"
+msgstr "/guides/tooling"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Learn more about Quarkus class loading infrastructure."
+msgid "Learn more about Quarkus integrations in IDEs."
+msgstr "Quarkusクラスのローディングインフラストラクチャについてはこちらをご覧ください。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, no-wrap
+msgid "Quarkus Tools in your favorite IDE"
+msgstr ""
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/tooling"
+msgid "/guides/ide-tooling"
 msgstr "/guides/tooling"
 
 #. type: Hash Value - Key: cat-id
