--- a/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.12.1.Final released - Bugfixes'\n"
@@ -34,21 +34,31 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: Quarkus 1.12.1.1.Finalリリース - バグフィックス\n"
+"date: 2021-03-03\n"
+"tags: release\n"
+"synopsis: 1.12.1.Finalでは問題を修正し、ドキュメントの改善を行いました。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:11
+#, fuzzy
 msgid "1.12.1.Final is a maintenance release fixing bugs and improving the documentation."
-msgstr ""
+msgstr "1.12.1.Finalは、バグの修正とドキュメントの改善を行うメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:13
+#, fuzzy
 msgid "1.12.1.Final is a safe upgrade for everyone using Quarkus 1.11."
-msgstr ""
+msgstr "1.12.1.Finalは、Quarkus 1.11を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:15
+#, fuzzy
 msgid "If you are not using 1.12 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12[1.12 migration guide]."
-msgstr ""
+msgstr "すでに1.12を使用していない場合は、1. link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12[12移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:16
@@ -64,8 +74,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:21
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.12.1.Final[the full changelog of 1.12.1.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.12.1.Final[1.12.1.1.Finalの完全な変更履歴はGitHubで]入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:22
