Apply translation memory

--- a/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
@@ -576,6 +576,9 @@ msgid ""
 "        return message;\n"
 "    }\n"
 msgstr ""
+"    public String getMessage() {\n"
+"        return message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-sns.adoc:260 upstream/_guides/amazon-sns.adoc:382
@@ -585,6 +588,9 @@ msgid ""
 "        this.message = message;\n"
 "    }\n"
 msgstr ""
+"    public void setMessage(String message) {\n"
+"        this.message = message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-sns.adoc:264 upstream/_guides/amazon-sns.adoc:386
