--- a/l10n/po/ja_JP/_guides/config.adoc.po
+++ b/l10n/po/ja_JP/_guides/config.adoc.po
@@ -178,6 +178,8 @@ msgid ""
 "@ConfigProperty(name = \"greeting.message\") <1>\n"
 "String message;\n"
 msgstr ""
+"@ConfigProperty(name = \"greeting.message\") <1>\n"
+"String message;\n"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:81
@@ -201,6 +203,8 @@ msgid ""
 "@ConfigProperty(name = \"greeting.suffix\", defaultValue=\"!\") <2>\n"
 "String suffix;\n"
 msgstr ""
+"@ConfigProperty(name = \"greeting.suffix\", defaultValue=\"!\") <2>\n"
+"String suffix;\n"
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:97
@@ -209,6 +213,8 @@ msgid ""
 "@ConfigProperty(name = \"greeting.name\")\n"
 "Optional<String> name; <3>\n"
 msgstr ""
+"@ConfigProperty(name = \"greeting.name\")\n"
+"Optional<String> name; <3>\n"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:99
@@ -274,7 +280,7 @@ msgstr "また、エンドポイントに加えられた変更を反映させる
 #: upstream/_guides/config.adoc:132
 #, no-wrap
 msgid "package org.acme.config;\n"
-msgstr ""
+msgstr "package org.acme.config;\n"
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:135
@@ -366,6 +372,8 @@ msgid ""
 "String databaseName = ConfigProvider.getConfig().getValue(\"database.name\", String.class);\n"
 "Optional<String> maybeDatabaseName = ConfigProvider.getConfig().getOptionalValue(\"database.name\", String.class);\n"
 msgstr ""
+"String databaseName = ConfigProvider.getConfig().getValue(\"database.name\", String.class);\n"
+"Optional<String> maybeDatabaseName = ConfigProvider.getConfig().getOptionalValue(\"database.name\", String.class);\n"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:178
@@ -390,6 +398,8 @@ msgid ""
 "quarkus.http.port=9090\n"
 "%dev.quarkus.http.port=8181\n"
 msgstr ""
+"quarkus.http.port=9090\n"
+"%dev.quarkus.http.port=8181\n"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:192
