--- a/l10n/po/ja_JP/_versions/1.11/guides/config.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/config.adoc.po
@@ -179,6 +179,8 @@ msgid ""
 "@ConfigProperty(name = \"greeting.message\") <1>\n"
 "String message;\n"
 msgstr ""
+"@ConfigProperty(name = \"greeting.message\") <1>\n"
+"String message;\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/config.adoc:81
@@ -202,6 +204,8 @@ msgid ""
 "@ConfigProperty(name = \"greeting.suffix\", defaultValue=\"!\") <2>\n"
 "String suffix;\n"
 msgstr ""
+"@ConfigProperty(name = \"greeting.suffix\", defaultValue=\"!\") <2>\n"
+"String suffix;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/config.adoc:97
@@ -210,6 +214,8 @@ msgid ""
 "@ConfigProperty(name = \"greeting.name\")\n"
 "Optional<String> name; <3>\n"
 msgstr ""
+"@ConfigProperty(name = \"greeting.name\")\n"
+"Optional<String> name; <3>\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/config.adoc:99
@@ -275,7 +281,7 @@ msgstr "また、エンドポイントに加えられた変更を反映させる
 #: upstream/_versions/1.11/guides/config.adoc:132
 #, no-wrap
 msgid "package org.acme.config;\n"
-msgstr ""
+msgstr "package org.acme.config;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/config.adoc:135
@@ -365,6 +371,8 @@ msgid ""
 "String databaseName = ConfigProvider.getConfig().getValue(\"database.name\", String.class);\n"
 "Optional<String> maybeDatabaseName = ConfigProvider.getConfig().getOptionalValue(\"database.name\", String.class);\n"
 msgstr ""
+"String databaseName = ConfigProvider.getConfig().getValue(\"database.name\", String.class);\n"
+"Optional<String> maybeDatabaseName = ConfigProvider.getConfig().getOptionalValue(\"database.name\", String.class);\n"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/config.adoc:178
@@ -389,6 +397,8 @@ msgid ""
 "quarkus.http.port=9090\n"
 "%dev.quarkus.http.port=8181\n"
 msgstr ""
+"quarkus.http.port=9090\n"
+"%dev.quarkus.http.port=8181\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/config.adoc:192
