--- a/l10n/po/ja_JP/_versions/1.11/guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/optaplanner.adoc.po
@@ -1446,7 +1446,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/optaplanner.adoc:816
 #, no-wrap
 msgid "Logging"
-msgstr ""
+msgstr "ロギング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/optaplanner.adoc:821
