--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-scheduled.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-scheduled.adoc.po
@@ -466,7 +466,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-scheduled.adoc:212
 #, no-wrap
 msgid "Using Property Expressions"
-msgstr ""
+msgstr "プロパティー式の使用"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-scheduled.adoc:216
