--- a/l10n/po/ja_JP/_versions/1.11/guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/validation.adoc.po
@@ -340,6 +340,9 @@ msgid ""
 "        return message;\n"
 "    }\n"
 msgstr ""
+"    public String getMessage() {\n"
+"        return message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/validation.adoc:172
