--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-sns.adoc.po
@@ -569,6 +569,9 @@ msgid ""
 "        return message;\n"
 "    }\n"
 msgstr ""
+"    public String getMessage() {\n"
+"        return message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:260
@@ -579,6 +582,9 @@ msgid ""
 "        this.message = message;\n"
 "    }\n"
 msgstr ""
+"    public void setMessage(String message) {\n"
+"        this.message = message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:264
