--- a/l10n/po/ja_JP/_versions/1.7/guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/optaplanner.adoc.po
@@ -1453,7 +1453,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/optaplanner.adoc:822
 #, no-wrap
 msgid "Logging"
-msgstr ""
+msgstr "ロギング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/optaplanner.adoc:827
