--- a/l10n/po/ja_JP/_versions/1.7/guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/validation.adoc.po
@@ -342,6 +342,9 @@ msgid ""
 "        return message;\n"
 "    }\n"
 msgstr ""
+"    public String getMessage() {\n"
+"        return message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/validation.adoc:174
