--- a/l10n/po/ja_JP/_versions/1.11/guides/scripting.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/scripting.adoc.po
@@ -627,7 +627,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/scripting.adoc:360
 #, no-wrap
 msgid "Logging"
-msgstr ""
+msgstr "ロギング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/scripting.adoc:363
