--- a/l10n/po/ja_JP/_guides/status-include.adoc.po
+++ b/l10n/po/ja_JP/_guides/status-include.adoc.po
@@ -3,45 +3,40 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-04 10:46+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:4
-#, fuzzy
 msgid "This technology is considered {extension-status}."
 msgstr "この技術は、{extension-status}と考えられています。"
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:9
-#, fuzzy
 msgid "In _experimental_ mode, early feedback is requested to mature the idea.  There is no guarantee of stability nor long term presence in the platform until the solution matures.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
-msgstr "_実験_ モードでは、アイデアを成熟させるために早期のフィードバックが求められます。ソリューションが成熟するまでの間、プラットフォームの安定性や長期的な存在を保証するものではありません。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHubのイシュートラッカー] で受け付けています。"
+msgstr "_experimental_ モードでは、アイデアを成熟させるために早期のフィードバックが求められます。ソリューションが成熟するまでの間、プラットフォームの安定性や長期的な存在を保証するものではありません。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHubの課題管理] で受け付けています。"
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:14
-#, fuzzy
 msgid "In _preview_, backward compatibility and presence in the ecosystem is not guaranteed.  Specific improvements might require to change configuration or APIs and plans to become _stable_ are under way.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
-msgstr "_プレビュー_ では、下位互換性やエコシステムでの存在は保証されていません。具体的な改善には設定や API の変更が必要になるかもしれませんが、 _安定_ 版になるための計画は現在進行中です。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHub のイシュートラッカー] で受け付けています。"
+msgstr "_preview_ では、下位互換性やエコシステムでの存在は保証されていません。具体的な改善には設定や API の変更が必要になるかもしれませんが、 _stable_ 版になるための計画は現在進行中です。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHub の課題管理] で受け付けています。"
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:17
-#, fuzzy
 msgid "Being _stable_, backward compatibility and presence in the ecosystem are taken very seriously."
-msgstr "_安定している_ こと、下位互換性があること、生態系の中に存在していることは、非常に深刻に受け止められています。"
+msgstr "_stable_ では、下位互換性があること、エコシステムの中に存在していることが、非常に重要だと考えられています。"
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:20
-#, fuzzy
 msgid "For a full list of possible extension statuses, check our https://quarkus.io/faq/#extension-status[FAQ entry]."
-msgstr "可能な拡張ステータスの完全なリストについては、 link:https://quarkus.io/faq/#extension-status[FAQの項目を] 参照してください。"
+msgstr "とりうるエクステンションステータスの完全なリストについては、 link:https://quarkus.io/faq/#extension-status[FAQの項目を] 参照してください。"
